# ulcerative-colitis-dysplasia

./: .gitignore  .mypy.ini  .ruff.toml  README.md  empaia_secrets.json  pyproject.toml
.gemini/: styleguide.md
configs/: base.yaml  default.yaml  ml.yaml  preprocessing.yaml  project_name.yaml
configs/data/: template.yaml
configs/dataset/: processed.yaml  processed_w_filter.yaml  processed_w_masks.yaml  processed_w_tiling.yaml  raw.yaml
configs/dataset/tiled/: level1_extent224.yaml  level1_extent512.yaml  level2_extent224.yaml  level2_extetn512.yaml
configs/dataset/tiled_filtered/: level1_extent224.yaml  level1_extent512.yaml  level2_extent224.yaml  level2_extetn512.yaml
configs/experiment/preprocessing/: tiling.yaml
configs/experiment/preprocessing/split_dataset/: raw.yaml
configs/experiment/preprocessing/tiling/: level1_extent224.yaml  level1_extent512.yaml  level2_extent224.yaml  level2_extent512.yaml
configs/ml/: train.yaml
configs/ml/model/: resnet50.yaml  vgg16.yaml  virchow2.yaml
configs/ml/model/backbone/: resnet50.yaml  vgg16.yaml
configs/ml/model/decode_head/: cnn_classifier.yaml  embedding_classifier.yaml
configs/preprocessing/: annotation_masks.yaml  base.yaml  create_dataset.yaml  download_annot.yaml  embeddings.yaml  filter_tiles.yaml  mean_std.yaml  qc.yaml  split_dataset.yaml  tile_masks.yaml  tiling.yaml  tissue_masks.yaml
dysplasia/: __main__.py  meta_arch.py  typing.py
dysplasia/data/: __init__.py  data_module.py
dysplasia/data/datasets/: __init__.py  labels.py  tiles.py
ml/: __main__.py  base_model.py  cnn_model.py  dysplasia_cnn.py  dysplasia_embeddings.py  embedding_model.py  meta_arch.py  typing.py
ml/data/: __init__.py  data_module.py
ml/data/datasets/: __init__.py  lables.py  tiles.py  utils.py
ml/data/samplers/: __init__.py  auto_weighted_random_sampler.py
ml/modeling/: mlp.py
ml/modeling/backbone/: __init__.py
ml/modeling/decode_head/: __init__.py  base_classifier.py  cnn_classifier.py  embedding_classifier.py
preprocessing/: annotation_masks.py  create_dataset.py  download_annot.py  embeddings.py  empaia_secrets.json  filter_tiles.py  mean_std.py  qc.py  quality_control.py  split_dataset.py  tile_masks.py  tiling.py  tissue_masks.py
preprocessing/conf/: default.yaml
project_name/: __main__.py  meta_arch.py  typing.py
scripts/: run_qc.py  run_tiling.py  run_tissue_masks.py
scripts/preprocessing/: create_dataset.py  filter_tiles.py  quality_control.py  run_qc.py  split_dataset.py  tiling.py  tissue_masks.py
