[project]
name = "project-name"
version = "0.1.0"
authors = []
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.2.0",
    "ray[data]>=2.20.0",
    "torch>=2.9.0",
    "lightning>=2.4.0",
    "torchmetrics>=1.4.1",
    "mlflow<3.0",
    "rationai-sdk>=0.1.0",
    "rationai-mlkit",
]

[project.optional-dependencies]
job = ["rationai-kube-jobs"]

[tool.uv.sources]
rationai-sdk = { git = "https://gitlab.ics.muni.cz/rationai/infrastructure/rationai-sdk-python.git" }
rationai-kube-jobs = { git = "ssh://git@gitlab.ics.muni.cz/rationai/infrastructure/kube-jobs" }
rationai-mlkit = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git" }

[dependency-groups]
dev = ["mypy", "ruff"]
