[project]
name = "ulcerative-colitis-dysplasia"
version = "0.1.0"
authors = [
    {name = "Šimon Bořil", email = "519192@mail.muni.cz"},
    {name = "Adam Kukučka", email = "adam.kukucka@mail.muni.cz"},
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.9.0",
    "lightning>=2.4.0",
    "torchmetrics>=1.4.1",
    "pandas",                 
    "hydra-core",             
    "ray[data]>=2.40.0",      
    "pyvips",                 
    "openslide-python",       
    "tqdm",             
    "mlflow>=3.10.1",
    "scikit-learn",         
    "openpyxl",     
    "omegaconf",
    "shapely",
    "rationai-sdk>=0.1.0",
    "rationai-masks",         
    "rationai-mlkit",
    "ratiopath",            
]

[tool.uv.sources]
rationai-sdk = { git = "https://gitlab.ics.muni.cz/rationai/infrastructure/rationai-sdk-python.git" }
rationai-kube-jobs = { git = "ssh://git@gitlab.ics.muni.cz/rationai/infrastructure/kube-jobs" }
rationai-mlkit = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git" }
rationai-masks = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git" }
ratiopath = { git = "https://github.com/RationAI/ratiopath.git" }

[dependency-groups]
dev = ["mypy", "ruff", "ipykernel"]
job = ["rationai-kube-jobs"]